openshift-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: stock-example-app
  labels:
    name: stock-example-app

---
# 1. BASE DE DATOS (REDIS)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-db
  namespace: stock-example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-db
  template:
    metadata:
      labels:
        app: stock-db
    spec:
      containers:
      - name: redis
        image: quay.io/mvalledi/stock-example-app-database:latest
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: stock-example-app
spec:
  selector:
    app: stock-db
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379

---
# 2. BACKEND (PYTHON API)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-backend
  namespace: stock-example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-backend
  template:
    metadata:
      labels:
        app: stock-backend
    spec:
      containers:
      - name: python-backend
        image: quay.io/mvalledi/stock-example-app-backend:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: stock-example-app
spec:
  selector:
    app: stock-backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000

---
# 3. FRONTEND (NGINX 8080)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-frontend
  namespace: stock-example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-frontend
  template:
    metadata:
      labels:
        app: stock-frontend
    spec:
      containers:
      - name: nginx-frontend
        image: quay.io/mvalledi/stock-example-app-frontend:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: stock-example-app
spec:
  selector:
    app: stock-frontend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: stock-ticker-route
  namespace: stock-example-app
spec:
  to:
    kind: Service
    name: frontend
  port:
    targetPort: 8080
  tls:
    termination: edge
